2005-02-14  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Depend on Gtk# 1.9.2.
	
	* src/About.cs:

	Subclass from Gnome.About.
	
	* src/Actions.cs:

	Subclass from ActionGroup, and use string index to access 
	actions.
	
	* src/PlaylistWindow.cs:

	Updated for Actions updates.
	
	* src/HandleModel.cs:

	Update to Gtk# 1.9.2 stuff.

2005-02-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/SkipToWindow.cs:

	Kill a gtk warning.

2005-02-09  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* README:

	Updated.

2005-02-09  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	0.8.2.99 - forgot to bump version number after release.

2005-02-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/Player.cs:

	Small cleanup.
	
	* src/SkipToWindow.cs:

	Do the actual seek from a timeout, bit smoother experience using
	the GST backend.

2005-02-09  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Make GStreamer the default backend.

	* libmuine/player-gst.c:

	Use a GTimer for time reporting rather than GStreamer, and
	escape path string before passing it to gst.
	
	* libmuine/player-xine.c:

	Small cleanup.
	
	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Do the actual song loading in an idle. This makes the whole UI
	feel a lot more responsive.

2005-02-09  Jorn Baayen  <jbaayen@gnome.org>

	* PluginLib/IPlayer.cs:
	* doc/en/Muine.PluginLib/IPlayer.xml:
	* src/PlaylistWindow.cs:

	Allow plugins to pack widgets into the playlistwindow's main
	vbox. 

2005-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:

	Release 0.8.2.

2005-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/Item.cs:
	* src/Song.cs:

	Make Deregister an abstract method of Item.
	
	* src/Album.cs:

	Implement Deregister.
	
	* src/SongDatabase.cs:

	Call Album.Deregister from the main loop. Fixes rare crash with
	album removals and UI activity at the same time.

2005-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	When syncing a song, make sure the call to StartRemoveFromAlbum